unpackaged/main/default/objects/Opportunity/fields/Academy_Products__c.field-meta.xml
<CustomField>
    <fullName>Academy_Products__c</fullName>
    <label>Academy Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Graduate Training</fullName>
            </value>
            <value>
                <fullName>Contract Fee</fullName>
            </value>
            <value>
                <fullName>Placement Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>