unpackaged/main/default/objects/Opportunity/fields/Account_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Account_Postcode__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <label>Account Postcode</label>
    <type>Text</type>
</CustomField>