unpackaged/main/default/objects/Opportunity/fields/AccountNameQuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNameQuoteNumber__c</fullName>
    <formula>Account.Name+" - "+Quote_Number_Revised__c</formula>
    <label>Account Name &amp; Quote Number</label>
    <type>Text</type>
</CustomField>