unpackaged/main/default/objects/Opportunity/fields/ACEAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>ACEAcceptedDate__c</fullName>
    <label>ACE Accepted Date</label>
    <type>Date</type>
</CustomField>