unpackaged/main/default/objects/Opportunity/fields/ACEDaysRemaining__c.field-meta.xml
<CustomField>
    <fullName>ACEDaysRemaining__c</fullName>
    <formula>IF( ISNULL( ACEAcceptedDate__c ) ,
NULL ,
ACEExpiryDate__c - TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACE Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>