unpackaged/main/default/objects/Opportunity/fields/ACEExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ACEExpiryDate__c</fullName>
    <formula>IF( ISNULL( ACEAcceptedDate__c ) ,
NULL , 
ACEAcceptedDate__c + 60 + ACEExtensionDays__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACE Expiry Date</label>
    <type>Date</type>
</CustomField>