unpackaged/main/default/objects/Opportunity/fields/ACEExtensionDays__c.field-meta.xml
<CustomField>
    <fullName>ACEExtensionDays__c</fullName>
    <inlineHelpText>Number of days (additional to standard 90) ACE registration has been extended by.</inlineHelpText>
    <label>ACE Extension</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>