unpackaged/main/default/objects/Opportunity/fields/ACEID__c.field-meta.xml
<CustomField>
    <fullName>ACEID__c</fullName>
    <label>ACE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>