unpackaged/main/default/objects/Opportunity/fields/ACEIsRegistered__c.field-meta.xml
<CustomField>
    <fullName>ACEIsRegistered__c</fullName>
    <formula>IF( OR( ISPICKVAL( ACEStatus__c , "Unregistered" ), ISPICKVAL( ACEStatus__c , "" ) ),
IMAGE("/img/checkbox_unchecked.gif", "FALSE"),
IMAGE("/img/checkbox_checked.gif", "TRUE")
)</formula>
    <label>ACE Registered</label>
    <type>Text</type>
</CustomField>