unpackaged/main/default/objects/Opportunity/fields/ACEStatus__c.field-meta.xml
<CustomField>
    <fullName>ACEStatus__c</fullName>
    <label>ACE Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unregistered</fullName>
                <default>true</default>
                <label>Unregistered</label>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>