unpackaged/main/default/objects/Opportunity/fields/Actual_Next_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Next_Invoice_Amount__c</fullName>
    <label>Actual Next Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>