unpackaged/main/default/objects/Opportunity/fields/Amount_Additional_Products__c.field-meta.xml
<CustomField>
    <fullName>Amount_Additional_Products__c</fullName>
    <formula>Amount + 6750</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount + Additional Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>