unpackaged/main/default/objects/Opportunity/fields/Amount_Incl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Amount_Incl_Vat__c</fullName>
    <formula>Amount +  Amount_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Incl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>