unpackaged/main/default/objects/Opportunity/fields/Amount_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_VAT__c</fullName>
    <formula>Amount * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>