unpackaged/main/default/objects/Opportunity/fields/APC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>APC_First_Name__c</fullName>
    <description>Used for Nurture Emails</description>
    <formula>Autodesk_Primary_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APC First Name</label>
    <type>Text</type>
</CustomField>