unpackaged/main/default/objects/Opportunity/fields/ApproversPick__c.field-meta.xml
<CustomField>
    <fullName>ApproversPick__c</fullName>
    <description>Identified all customer approvers &amp; added to Win Plan</description>
    <inlineHelpText>PROCESS ALIGNMENT: Identified all customer approvers &amp; added to Win Plan</inlineHelpText>
    <label>Approvers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>