unpackaged/main/default/objects/Opportunity/fields/Auto_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Auto_Owner_Id__c</fullName>
    <formula>LEFT(OwnerId, 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Id</label>
    <type>Text</type>
</CustomField>