unpackaged/main/default/objects/Opportunity/fields/Autodesk_3_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Autodesk_3_Year_End_Date__c</fullName>
    <formula>IF(No_of_3_year_Autodesk_Products__c &gt; 0,  DATETIMEVALUE(CloseDate+1095), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autodesk 3-Year End Date</label>
    <type>Date</type>
</CustomField>