unpackaged/main/default/objects/Opportunity/fields/Autodesk_Contract_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Autodesk_Contract_Manager_Email__c</fullName>
    <formula>Account.AutodeskContractManagerEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autodesk Contract Manager Email</label>
    <type>Text</type>
</CustomField>