unpackaged/main/default/objects/Opportunity/fields/Autodesk_FQ__c.field-meta.xml
<CustomField>
    <fullName>Autodesk_FQ__c</fullName>
    <formula>CASE( MONTH(CloseDate ),
2, "Q1",
3, "Q1",
4, "Q1",
5, "Q2",
6, "Q2",
7, "Q2",
8, "Q3",
9, "Q3",
10, "Q3",
11, "Q4",
12, "Q4",
1, "Q4",
"Error" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autodesk FQ</label>
    <type>Text</type>
</CustomField>