unpackaged/main/default/objects/Opportunity/fields/Autodesk_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Autodesk_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Nurture Emails</description>
    <label>Autodesk Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Autodesk Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>