unpackaged/main/default/objects/Opportunity/fields/AutodeskContractManager__c.field-meta.xml
<CustomField>
    <fullName>AutodeskContractManager__c</fullName>
    <formula>HYPERLINK( "https://majenta.my.salesforce.com/" + Account.AutodeskContractManager__r.Id,
  Account.AutodeskContractManager__r.FirstName + " " + Account.AutodeskContractManager__r.LastName,
  "_top" )</formula>
    <label>Autodesk Contract Manager</label>
    <type>Text</type>
</CustomField>