unpackaged/main/default/objects/Opportunity/fields/AutodeskRevenue__c.field-meta.xml
<CustomField>
    <fullName>AutodeskRevenue__c</fullName>
    <label>Autodesk Revenue</label>
    <summarizedField>OpportunityLineItem.Total_Sale_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Category_ro__c</field>
        <operation>startsWith</operation>
        <value>Autodesk</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>