unpackaged/main/default/objects/Opportunity/fields/BalanceBroughtForward__c.field-meta.xml
<CustomField>
    <fullName>BalanceBroughtForward__c</fullName>
    <label>Balance Brought Forward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>