unpackaged/main/default/objects/Opportunity/fields/Benefit_of_Solution__c.field-meta.xml
<CustomField>
    <fullName>Benefit_of_Solution__c</fullName>
    <description>What did the solution help the company, department and/or people involved achieve? What was the benefit to them using Majenta Solutions and the solution within the opportunity?</description>
    <inlineHelpText>What did the solution help the company, department and/or people involved achieve? What was the benefit to them using Majenta Solutions and the solution within the opportunity?</inlineHelpText>
    <label>Benefit of Solution</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>