unpackaged/main/default/objects/Opportunity/fields/BillingCycle__c.field-meta.xml
<CustomField>
    <fullName>BillingCycle__c</fullName>
    <formula>CASE(BillingCycleMonths__c,
  0, "Standard",
  1, "Monthly",
  3, "Quarterly",
  6, "Biannually",
  12, "Annually",
TEXT(BillingCycleMonths__c)+" Months")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Cycle</label>
    <type>Text</type>
</CustomField>