unpackaged/main/default/objects/Opportunity/fields/BillingCycleMonths__c.field-meta.xml
<CustomField>
    <fullName>BillingCycleMonths__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Billing Cycle (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>