unpackaged/main/default/objects/Opportunity/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <formula>CASE( Type, 
  "New Customer New Business", "New", 
  "Existing Customer New Business", "New",
  "Existing Customer Maintenance Renewal", "Renewal",
  "Existing Customer Mixed Business", "Mixed",
  "Supplier Credit/Rebate", "Credit/Rebate",
  "Marketing Funding/Cost", "Marketing",
  "Other"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type (Legacy)</label>
    <type>Text</type>
</CustomField>