unpackaged/main/default/objects/Opportunity/fields/BusinessCasePick__c.field-meta.xml
<CustomField>
    <fullName>BusinessCasePick__c</fullName>
    <description>Verified that a Business justification approved by executive management is in place.</description>
    <inlineHelpText>VALUE ALIGNMENT: Verified that a Business justification approved by executive management is in place.</inlineHelpText>
    <label>Business Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>