unpackaged/main/default/objects/Opportunity/fields/BusinessSponsorPick__c.field-meta.xml
<CustomField>
    <fullName>BusinessSponsorPick__c</fullName>
    <description>Identified and confirmed a business sponsor &amp; associated program to lead solution adoption.</description>
    <inlineHelpText>EXECUTIVE ALIGNMENT: Identified and confirmed a business sponsor &amp; associated program to lead solution adoption.</inlineHelpText>
    <label>Business Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>