unpackaged/main/default/objects/Opportunity/fields/Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price__c</fullName>
    <label>Buy Price</label>
    <summarizedField>OpportunityLineItem.Buy_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>