unpackaged/main/default/objects/Opportunity/fields/BuyPriceTrig__c.field-meta.xml
<CustomField>
    <fullName>BuyPriceTrig__c</fullName>
    <description>Receives the rolled-up Buy_Price__c value from the Salesforce to Salesforce transferred Opportunity (to populate Margin based on an inserted OpportunityProduct)</description>
    <label>BuyPriceTrig</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>