unpackaged/main/default/objects/Opportunity/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>CASE(Division__c,
"PLM", "PLM",
"Solid Edge", "PLM",
"COMOS", "PLM",
"MPLM Software Development", "PLM",
"enerjyhub","ENERJYHUB",
"SOLUTIONS"
)</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>