unpackaged/main/default/objects/Opportunity/fields/Company_Given_Marketing_Permission__c.field-meta.xml
<CustomField>
    <fullName>Company_Given_Marketing_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the account/contact agree to the use of their solution being used in marketing activity?</description>
    <inlineHelpText>Does the account/contact agree to the use of their solution being used in marketing activity?</inlineHelpText>
    <label>Company Given Marketing Permission</label>
    <type>Checkbox</type>
</CustomField>