unpackaged/main/default/objects/Opportunity/fields/Company_Given_Marketing_Permission_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Given_Marketing_Permission_Date__c</fullName>
    <description>Date acquired permission from company</description>
    <inlineHelpText>Date acquired permission from company</inlineHelpText>
    <label>Company Given Marketing Permission Date</label>
    <type>Date</type>
</CustomField>