unpackaged/main/default/objects/Opportunity/fields/Company_reg_number__c.field-meta.xml
<CustomField>
    <fullName>Company_reg_number__c</fullName>
    <formula>Account.Company_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company reg. number</label>
    <type>Text</type>
</CustomField>