unpackaged/main/default/objects/Opportunity/fields/CompellingReasontoActPick__c.field-meta.xml
<CustomField>
    <fullName>CompellingReasontoActPick__c</fullName>
    <description>Established Compelling reason(s) to make purchase aligned with Opportunity Close Date</description>
    <inlineHelpText>VALUE ALIGNMENT: Established Compelling reason(s) to make purchase aligned with Opportunity Close Date</inlineHelpText>
    <label>Compelling Reason to Act</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>