unpackaged/main/default/objects/Opportunity/fields/ConsultAmount__c.field-meta.xml
<CustomField>
    <fullName>ConsultAmount__c</fullName>
    <inlineHelpText>Sum of Total Sale Price on Opp Product</inlineHelpText>
    <label>Total Consultancy Amount</label>
    <summarizedField>OpportunityLineItem.Total_Sale_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Total_Sale_Price__c</field>
        <operation>notEqual</operation>
        <value>0.00</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>