unpackaged/main/default/objects/Opportunity/fields/Consultancy_Days_Booked__c.field-meta.xml
<CustomField>
    <fullName>Consultancy_Days_Booked__c</fullName>
    <formula>Project__r.ConsultancyDaysBooked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Consultancy Days Booked in the Project (Consultancy Billable Days from Resource Booking)</inlineHelpText>
    <label>Consultancy Days Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>