unpackaged/main/default/objects/Opportunity/fields/ConsultCost__c.field-meta.xml
<CustomField>
    <fullName>ConsultCost__c</fullName>
    <formula>ConsultAmount__c /  Days_Purchased__c</formula>
    <label>Daily Consultancy Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>