unpackaged/main/default/objects/Opportunity/fields/Contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_end_date__c</fullName>
    <formula>DATE(
  YEAR( CloseDate  ) + FLOOR( ( MONTH ( CloseDate ) +  Contract_length_in_months__c  - 1 ) / 12 ),
  MOD( MONTH ( CloseDate ) + Contract_length_in_months__c - 1 + 
    IF( DAY ( CloseDate ) &gt; CASE( MOD( MONTH( CloseDate ) + Contract_length_in_months__c - 1, 12 ) + 1, 
      2, 28,
      4, 30,
      6, 30,
      9, 30, 
      11, 30,
      31 ), 1, 0 ), 12 ) + 1,
    IF( DAY( CloseDate ) &gt; CASE( MOD( MONTH( CloseDate ) + Contract_length_in_months__c - 1, 12 ) + 1,
      2, 28, 
      4, 30, 
      6, 30, 
      9, 30, 
      11, 30, 
      31 ), 
    1, DAY( CloseDate )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract end date</label>
    <type>Date</type>
</CustomField>