unpackaged/main/default/objects/Opportunity/fields/Contract_length_in_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_length_in_months__c</fullName>
    <defaultValue>12</defaultValue>
    <description>This field is used for the EnerjyHUB subscription to determine for how many months the contract will run.</description>
    <label>Contract length (in months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>