unpackaged/main/default/objects/Opportunity/fields/Contract_Number_Sold_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Sold_To_ID__c</fullName>
    <formula>Support_Contract__r.Contract_No_Site_ID__c</formula>
    <label>Contract Number / Sold To ID</label>
    <type>Text</type>
</CustomField>