unpackaged/main/default/objects/Opportunity/fields/ContractFinishDate__c.field-meta.xml
<CustomField>
    <fullName>ContractFinishDate__c</fullName>
    <inlineHelpText>This is the current finish date of the support contract being renewed.</inlineHelpText>
    <label>Current Expiry Date</label>
    <type>Date</type>
</CustomField>