unpackaged/main/default/objects/Opportunity/fields/ContractLengthMonths__c.field-meta.xml
<CustomField>
    <fullName>ContractLengthMonths__c</fullName>
    <formula>Support_Contract__r.Contract_Length__c</formula>
    <label>Contract Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>