unpackaged/main/default/objects/Opportunity/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Who is the main Contractor?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>