unpackaged/main/default/objects/Opportunity/fields/ConvincingDeploymentPlanPick__c.field-meta.xml
<CustomField>
    <fullName>ConvincingDeploymentPlanPick__c</fullName>
    <description>Delivered a Deployment plan that will meet the customer requirements &amp; expectations</description>
    <inlineHelpText>VALUE ALIGNMENT: Delivered a Deployment plan that will meet the customer requirements &amp; expectations</inlineHelpText>
    <label>Convincing Deployment Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>