unpackaged/main/default/objects/Opportunity/fields/Cost_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Cost_Incl_VAT__c</fullName>
    <formula>Cost__c + Cost_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Incl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>