unpackaged/main/default/objects/Opportunity/fields/Cost_VAT__c.field-meta.xml
<CustomField>
    <fullName>Cost_VAT__c</fullName>
    <formula>( Cost__c * 0.2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>