unpackaged/main/default/objects/Opportunity/fields/CreatedByAlias__c.field-meta.xml
<CustomField>
    <fullName>CreatedByAlias__c</fullName>
    <formula>CreatedBy.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Alias</label>
    <type>Text</type>
</CustomField>