unpackaged/main/default/objects/Opportunity/fields/CredibleReferencesPick__c.field-meta.xml
<CustomField>
    <fullName>CredibleReferencesPick__c</fullName>
    <description>Provided Customer examples that validate we meet customer requirements</description>
    <inlineHelpText>TECHNICAL ALIGNMENT: Provided Customer examples that validate we meet customer requirements</inlineHelpText>
    <label>Credible References</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>