unpackaged/main/default/objects/Opportunity/fields/CSAT_CallDate__c.field-meta.xml
<CustomField>
    <fullName>CSAT_CallDate__c</fullName>
    <label>Customer Satisfaction Call Date</label>
    <type>Date</type>
</CustomField>