unpackaged/main/default/objects/Opportunity/fields/CSAT_Comments__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Comments__c</fullName>
    <label>Customer Satisfaction Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>