unpackaged/main/default/objects/Opportunity/fields/CSAT_Completed__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Completed__c</fullName>
    <formula>CSAT_CallDate__c &lt;= TODAY() &amp;&amp; NOT(ISBLANK(TEXT(CSAT_Score__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Satisfaction Completed</label>
    <type>Checkbox</type>
</CustomField>