unpackaged/main/default/objects/Opportunity/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <label>Customer Satisfaction Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 - Very satisfied</fullName>
            </value>
            <value>
                <fullName>4 - Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>3 - Neither satisfied nor dissatisfied</fullName>
            </value>
            <value>
                <fullName>2 - Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>1 - Very dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>