unpackaged/main/default/objects/Opportunity/fields/CSAT_SurveySentDate__c.field-meta.xml
<CustomField>
    <fullName>CSAT_SurveySentDate__c</fullName>
    <label>Customer Satisfaction Survey Date</label>
    <type>Date</type>
</CustomField>