unpackaged/main/default/objects/Opportunity/fields/CSAT_ToEmail__c.field-meta.xml
<CustomField>
    <fullName>CSAT_ToEmail__c</fullName>
    <label>Customer Satisfaction Email Address</label>
    <type>Email</type>
</CustomField>