unpackaged/main/default/objects/Opportunity/fields/CurrentStatusPick__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatusPick__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refusal to subscribe</fullName>
            </value>
            <value>
                <fullName>Value justification required</fullName>
            </value>
            <value>
                <fullName>Progressing sales process</fullName>
            </value>
            <value>
                <fullName>COVID19 delay</fullName>
            </value>
            <value>
                <fullName>Ignoring communications</fullName>
            </value>
            <value>
                <fullName>Awaiting confirmation from JLR</fullName>
            </value>
            <value>
                <fullName>JLR said not needed</fullName>
            </value>
            <value>
                <fullName>No active work with JLR</fullName>
            </value>
            <value>
                <fullName>Using DSP</fullName>
            </value>
            <value>
                <fullName>DS Rejected</fullName>
            </value>
            <value>
                <fullName>DS Direct Account</fullName>
            </value>
            <value>
                <fullName>Licensing Source Outside UK</fullName>
            </value>
            <value>
                <fullName>D&amp;D Outside UK</fullName>
            </value>
            <value>
                <fullName>Fully Engaged</fullName>
            </value>
            <value>
                <fullName>No Oppy</fullName>
            </value>
            <value>
                <fullName>To Be Qualified</fullName>
            </value>
            <value>
                <fullName>Initial Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>