unpackaged/main/default/objects/Opportunity/fields/Customer_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>WARNING: Checking this box will set the invoicing status for this Opportunity to "Complete" preventing future alerts and removing it from views, reports &amp; dashboards for outstanding invoicing.</inlineHelpText>
    <label>Invoicing Complete (Manual Override)</label>
    <type>Checkbox</type>
</CustomField>