unpackaged/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>CASE( Type ,
"New Customer New Business", "New",
"Existing Customer New Business", "Existing",
"Existing Customer Maintenance Renewal", "Existing",
"Existing Customer Mixed Business", "Existing",
"Other" )</formula>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>