unpackaged/main/default/objects/Opportunity/fields/Dassault_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Campaign_Code__c</fullName>
    <formula>SUBSTITUTE(MID(Campaign.Name, Find("$", Campaign.Name), 19),"$","")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dassault Campaign Code</label>
    <type>Text</type>
</CustomField>