unpackaged/main/default/objects/Opportunity/fields/Dassault_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Opportunity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Dassault Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>